--- a/src/EventPlanning.Web/Views/Event/Details.cshtml
+++ b/src/EventPlanning.Web/Views/Event/Details.cshtml
@@ -153,11 +153,10 @@
                     }
                     else if (Model.IsJoined)
                     {
-                        <form asp-action="Leave" asp-route-id="@Model.Id" method="post" onsubmit="return confirm('Are you sure you want to leave this event?');">
-                            <button type="submit" class="btn btn-outline-danger w-100">
-                                <i class="bi bi-box-arrow-right me-2"></i> Leave Event
-                            </button>
-                        </form>
+                        @* ЗМІНА ТУТ: Кнопка тепер відкриває модальне вікно *@
+                        <button type="button" class="btn btn-outline-danger w-100" data-bs-toggle="modal" data-bs-target="#leaveEventModal">
+                            <i class="bi bi-box-arrow-right me-2"></i> Leave Event
+                        </button>
                     }
                     else if (Model.IsFull)
                     {
@@ -242,6 +241,31 @@
     </div>
 </div>
 
+@* --- LEAVE EVENT MODAL (Для учасників) --- *@
+@if (Model.IsJoined && !Model.IsPast)
+{
+    <div class="modal fade" id="leaveEventModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content border-0 shadow">
+                <div class="modal-header border-0 pb-0">
+                    <h5 class="modal-title fw-bold text-danger">Leave Event</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <p class="mb-0">Are you sure you want to leave <strong>@Model.Name</strong>? You will lose your spot on the guest list.</p>
+                </div>
+                <div class="modal-footer border-0 pt-0">
+                    <button type="button" class="btn btn-light" data-bs-dismiss="modal">Cancel</button>
+                    <form asp-action="Leave" asp-route-id="@Model.Id" method="post">
+                        <button type="submit" class="btn btn-danger px-4">Leave Event</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+}
+
+@* --- ORGANIZER MODALS --- *@
 @if (Model is { IsOrganizer: true, IsPast: false })
 {
     <div class="modal fade" id="addGuestModal" tabindex="-1" aria-hidden="true">
